Frame/Spring/SpringBoot/v3/Basis/Introduce/README.md
# SpringBoot介绍

SpringBoot是整合Spring技术栈的一站式框架，简化Spring技术栈的**快速开发脚手架**。SpringBoot 可以轻松地创建独立的、生产级别的Spring应用程序，并"直接运行"这些应用程序。

Spring Boot改变了配置文件复杂、依赖管理混乱、简化了集成其他框架。

Spring Boot **特性**： 

1. 快速创建独立的 Spring 应用程序(**SpringBoot底层是Spring**)。 
1. 直接嵌入 Tomcat、 Jetty、 Undertow 容器(jar)，无需单独部署WAR包。
1. 提供的 starters 简化构建配置(简化依赖管理和版本控制，**按需自动配置**)。
1. 尽可能自动配置 spring 应用和第三方库。
1. 提供生产指标,例如指标、健壮检查和外部化配置。
1. 没有代码生成，无需 XML 配置。
1. 简化部署，打包为可执行的jar包。

有了spring boot脚手架才能使用Spring Cloud，开发分布式微服务架构的项⽬。

- SpringBoot 官方文档：https://spring.io/projects/spring-boot
- 版本新特性：https://github.com/spring-projects/spring-boot/wiki#release-notes

## 时代背景

### 微服务

[James Lewis and Martin Fowler (2014)](https://martinfowler.com/articles/microservices.html)  提出微服务完整概念。https://martinfowler.com/microservices/

In short, the **microservice architectural style** is an approach to developing a single application as a **suite of small services**, each **running in its own process** and communicating with **lightweight** mechanisms, often an **HTTP** resource API. These services are **built around business capabilities** and **independently deployable** by fully **automated deployment** machinery. There is a **bare minimum of centralized management** of these services, which may be **written in different programming languages** and use different data storage technologies.-- [James Lewis and Martin Fowler (2014)](https://martinfowler.com/articles/microservices.html)

- 微服务是一种架构风格
- 一个应用拆分为一组小型服务
- 每个服务运行在自己的进程内，也就是可独立部署和升级
- 服务之间使用轻量级HTTP交互
- 服务围绕业务功能拆分
- 可以由全自动部署机制独立部署
- 去中心化，服务自治。服务可以使用不同的语言、不同的存储技术

### 分布式

![image-20230222114734752](https://cdn.jsdelivr.net/gh/letengzz/Two-C@main/img/Java/202302221830099.png)

#### 分布式的困难

- 远程调用
- 服务发现
- 负载均衡
- 服务容错
- 配置管理
- 服务监控
- 链路追踪
- 日志管理
- 任务调度
- ......

#### 分布式的解决

- SpringBoot + [SpringCloud](../../../../SpringCloud/README.md)

![image-20230222183107799](https://cdn.jsdelivr.net/gh/letengzz/Two-C@main/img/Java/202302221831240.png)

### 云原生

原生应用如何上云： Cloud Native

#### 上云的困难

- 服务自愈
- 弹性伸缩
- 服务隔离
- 自动化部署
- 灰度发布
- 流量治理
- ......

#### 上云的解决

![image-20230222142714695](https://cdn.jsdelivr.net/gh/letengzz/Two-C@main/img/Java/202302221831409.png)

## Spring生态

![image-20230222113843702](https://cdn.jsdelivr.net/gh/letengzz/Two-C@main/img/Java/202302221831452.png)

- 微服务 
- 响应式开发 
- 分布式 
- web开发 
- ⽆服务开发 
- 事件驱动 
- 批处理业务

## SpringBoot优点

- Create stand-alone Spring applications

  创建独立Spring应用

- Embed Tomcat, Jetty or Undertow directly (no need to deploy WAR files)

  内嵌web服务器

- Provide opinionated 'starter' dependencies to simplify your build configuration

  自动starter依赖，简化构建配置

- Automatically configure Spring and 3rd party libraries whenever possible

  自动配置Spring以及第三方功能

- Provide production-ready features such as metrics, health checks, and externalized configuration

  提供生产级别的监控、健康检查及外部化配置

- Absolutely no code generation and no requirement for XML configuration

  无代码生成、无需编写XML

## SpringBoot缺点

- 人称版本帝，迭代快，需要时刻关注变化
- 封装太深，内部原理复杂，不容易精通

## SpringBoot3 介绍

在2023年，SpringBoot迎来了它的第三个大版本，随着SpringBoot 3的正式发布，整个生态也迎来了一次重大革新。

**目前的最新版本以及对应的维护情况**：

![image-20230804112343089](https://cdn.jsdelivr.net/gh/letengzz/Two-C@main/img/202308041123294.png)

可以看到，曾经的SpringBoot 2.5版本将会在2023年8月底终止商业支持，届时将不会再对这类旧版本进行任何维护，因此，将老版本SpringBoot项目进行升级已经迫在眉睫，目前最强的3.1正式版会维护到2025年中旬。

在3.X之后的变化相比2.X可以说是相当大，尤其是其生态下的SpringSecurity框架，旧版本项目在升级之后API已经完全发生改变；以及内置Tomcat服务器的升级，Servlet也升级到5以上，从`javax`全新升级到`jakarta`新包名；包括在3.X得到的大量新特性，如支持GraalVM打包本地镜像运行等；并且Java版本也强制要求为17版本。迁移到新版本不仅可以享受到免费维护支持，也可以感受Java17带来的全新体验。